fix: dependencies on cicd

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -18,8 +18,8 @@ jobs:
       matrix:
         python-version: [3.9]
     steps:
-    - uses: action/checkout@v4
-    - uses: action/setup-python@v5
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - uses: pantsbuild/actions/init-pants@v8
