--- a/pants.toml
+++ b/pants.toml
@@ -15,6 +15,8 @@ root_patterns = ["/src", "/tests"]
 
 [python]
 interpreter_constraints = ["==3.9.*"]
+enable_resolves = true
+resolves = { python-default = "python-default.lock"}
 
 [python-bootstrap]
 # This searches the Python interpreters in your machine. Installation of pyenv is highly encouraged
