--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -35,18 +35,12 @@ jobs:
     - name: Static Analysis
       # Currently, no workaround on running on changed files yet -- our repository isn't that big to need this
       run: | 
-        pants \
-        tailor --check \
-        update-build-files --check \
-        lint
+        pants lint ::
     - name: Unit Test
       # Run tests for all targets that have changed since the last commit on main
       # also with dependency change with --changed-dependents
       run: |
-        pants \
-        --changed-since=origin/main \
-        --changed-dependents=transitive \
-        test ::
+        pants test :: 
     - name: Upload pants log
       uses: actions/upload-artifact@v4
       with:
