--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -51,7 +51,7 @@ jobs:
     name: deploy
     needs: build
     if: |
-      (startsWith(github.ref, 'ref/heads/release/') && 
+      (startsWith(github.ref, 'ref/heads/feature/') && 
       github.event_name == 'workflow_dispatch' && 
       inputs.deploy == true)
     runs-on: ubuntu-20.04
