Integration of FastAPI server with CICD

--- a/src/optimus_terminal/BUILD
+++ b/src/optimus_terminal/BUILD
@@ -1,1 +1,4 @@
-python_sources()
+python_sources(
+    name="optimus_terminal",
+    sources=["__init__.py", "models.py"],  # Include the module's init file
+)
