--- a/src/optimus_terminal/fast_api/BUILD
+++ b/src/optimus_terminal/fast_api/BUILD
@@ -1,6 +1,3 @@
 python_sources()
 
-pex_binary(
-    name='server_run',
-    entry_point='main.py'
-)
+pex_binary(name="server_run", entry_point="main.py")
